--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -6,3 +6,7 @@ require:
 AllCops:
   TargetRubyVersion: 2.6
   NewCops: enable
+Metrics/BlockLength:
+  Exclude:
+    - spec/**/*_spec.rb
+    - spec/factories/**/*.rb
